--- a/src/components/brand/brand.css
+++ b/src/components/brand/brand.css
@@ -7,10 +7,10 @@
 
 .gpt3__brand div {
     flex: 1;
-    max-width: 150px;
-    min-width: 120px;
-    margin: 1rem;
-
+    max-width: 5px;
+    min-width: 100px;
+    margin: 0.1px;
+    opacity: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
