--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -9,7 +9,6 @@
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-
     margin-right: 5rem;
 }
 
@@ -27,14 +26,12 @@
     font-size: 20px;
     line-height: 28px;
     color: var(--color-text);
-
     margin-top: 1.5rem;
 }
 
 .gpt3__header-content__input {
     width: 100%;
     margin: 2rem 0 1rem;
-
     display: flex;
     flex-direction: row;
 }
@@ -52,7 +49,6 @@
     padding: 0 1rem;
     outline: none;
     color: #fff;
-
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
 }
@@ -71,7 +67,6 @@
     color: #fff;
     cursor: pointer;
     outline: none;
-
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
 }
@@ -82,7 +77,6 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: row;
-
     margin-top: 2rem;
 }
 
@@ -111,6 +105,18 @@
 .gpt3__header-image img {
     width: 100%;
     height: 100%;
+    margin-right: 10px;
+    animation: waveAnim 2s linear infinite alternate;
+}
+
+/* Move @keyframes outside the selector */
+@keyframes waveAnim {
+    0% {
+        transform: translate(0, 0) rotate(0);
+    }
+    100% {
+        transform: translate(10px, 10px) rotate(3deg);
+    }
 }
 
 @media screen and (max-width: 1050px) {
@@ -133,7 +139,7 @@
         font-size: 16px;
         line-height: 24px;
     }
-    
+
     .gpt3__header-content__people {
         flex-direction: column;
     }
