--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -32,18 +32,18 @@
     font-size: 11.65px;
     font-weight: 700;
     line-height: 35px;
-
+    margin-bottom: 5px;
     color: #fff;
 }
 
 .gpt3__blog-container_article-content h3 {
     font-family: var(--font-family);
-    font-size: 25.11px;
+    font-size: 16px;
     font-weight: 800;
     line-height: 30.30px;
     
     color: #fff;
-    margin-bottom: 5rem;
+    margin-bottom: 20px;
     cursor: pointer;
 }
 
