--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -57,4 +57,8 @@
         font-size: 18px;
         line-height: 25p;
     }
+    .gpt3__blog-container_article-image img {
+        width: 60%;
+        height: 60%;
+    }
 }
