--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -50,7 +50,7 @@
     }
 
     .gpt3__blog-container_groupA .gpt3__blog-container_article-image {
-        height: 150px;
+        height: 60;
     }
 }
 
