--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -60,3 +60,9 @@
         margin: 1rem 0;
     }
 }
+
+@media screen and (max-width: 700px) {
+    .gpt3__features-heading p {
+        font-size: 12px;
+    }
+}
