--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
 
-    padding: 2rem 6rem;
+    padding: 2px 6rem;
 }
 
 .gpt3__navbar-links {
@@ -19,7 +19,7 @@
 
 .gpt3__navbar-links_logo img {
     width: 200px;
-    height: 90px;
+    height: 150px;
 }
 
 .gpt3__navbar-links_container {
@@ -78,7 +78,6 @@
     justify-content: flex-end;
     align-items: flex-end;
     flex-direction: column;
-    
     text-align: end;
     background: var(--color-footer);
     padding: 2rem;
@@ -98,6 +97,52 @@
 .gpt3__navbar-menu_container-links-sign {
     display: none;
 }
+
+.navbar-dropdown {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    height: 100%;
+  }
+  
+  .navbar-dropdown-button {
+    background: none;
+    border: none;
+    color: #fff;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 25px;
+    text-transform: capitalize;
+    margin: 0 1rem;
+    cursor: pointer;
+    padding: 0; /* Remove any default button padding */
+  }
+
+  .navbar-dropdown-menu {
+    position: absolute;
+    background-color: var(--color-footer);
+    min-width: 160px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+  }
+  
+  .navbar-dropdown-menu button {
+    background: none;
+    border: none;
+    padding: 10px;
+    color: white;
+    text-align: left;
+    cursor: pointer;
+    font-family: var(--font-family);
+  }
+  
+  .navbar-dropdown-menu button:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+  }  
 
 @media screen and (max-width: 1050px) {
     .gpt3__navbar-links_container {
