--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -10,8 +10,7 @@
 .gpt3__footer-heading {
     width: 100%;
     text-align: center;
-
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 
 .gpt3__footer-heading h1 {
@@ -25,12 +24,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
     padding: 1rem;
     border: 1px solid #fff;
     text-align: center;
-
-    margin-bottom: 10rem;
+    margin-bottom: 2rem;
     cursor: pointer;
 }
 
@@ -54,8 +51,8 @@
 }
 
 .gpt3__footer-links div {
-    width: 250px;
-    margin: 1rem;
+    width: 150px;
+    margin: 0.5rem
 }
 
 .gpt3__footer-links_logo {
@@ -64,9 +61,8 @@
 }
 
 .gpt3__footer-links_logo img {
-    width: 200px;
-    height: 90px;
-
+    width: 180px;
+    height: auto;
     margin-bottom: 1rem;
 }
 
@@ -98,7 +94,7 @@
     font-family: var(--font-family);
     color: #fff;
 
-    margin: 0.5rem 0;
+    margin: 0.8rem 0;
     cursor: pointer;
 }
 
