--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-    padding: 2px 4rem 2px;
+    padding: 2rem 4rem 1rem;
 }
 
 .gpt3__navbar-links {
@@ -14,11 +13,13 @@
 }
 
 .gpt3__navbar-links_logo {
-    margin-right: 1.5rem;
+    margin-left: 2rem;
+    margin-top: 0.9rem;
+    margin-right: 8.5rem;
 }
 
 .gpt3__navbar-links_logo img {
-    width: 250px;
+    width: 130px;
     height: auto;
     object-fit: contain; /* Ensures logo fits properly */
 }
