--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,182 +1,134 @@
 .gpt3__navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem 4rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 4rem 1rem;
 }
 
 .gpt3__navbar-links {
-    flex: 1;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .gpt3__navbar-links_logo {
-    margin-left: 2rem;
-    margin-top: 0.9rem;
-    margin-right: 8.5rem;
+  margin-right: 2rem; /* Reduced from 8.5rem */
 }
 
 .gpt3__navbar-links_logo img {
-    width: 130px;
-    height: auto;
-    object-fit: contain; /* Ensures logo fits properly */
+  width: 130px;
+  height: auto;
+  object-fit: contain;
 }
 
 .gpt3__navbar-links_container {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
+  margin-left: auto; /* Push links to the right */
 }
 
 .gpt3__navbar-sign {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .gpt3__navbar-links_container p,
 .gpt3__navbar-sign p,
 .gpt3__navbar-menu_container p {
-    color: #fff;
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 25px;
-    text-transform: capitalize;
-
-    margin: 0 1rem;
-    cursor: pointer;
+  color: #fff;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
+  text-transform: capitalize;
+  margin: 0 1.2rem;
+  cursor: pointer;
 }
 
 .gpt3__navbar-sign button,
 .gpt3__navbar-menu_container button {
-    padding: 0.5rem 1rem;
-    color: #fff;
-    background: #FF4820;
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 25px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    border-radius: 5px;
+  padding: 0.5rem 1rem;
+  color: #fff;
+  background: #FF4820;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .gpt3__navbar-menu {
-    margin-left: 1rem;
-
-    display: none;
-    position: relative;
+  margin-left: 1rem;
+  display: none;
+  position: relative;
 }
 
 .gpt3__navbar-menu svg {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .gpt3__navbar-menu_container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    flex-direction: column;
-    text-align: end;
-    background: var(--color-footer);
-    padding: 2rem;
-    position: absolute;
-    right: 0;
-    top: 40px;
-    margin-top: 1rem;
-    min-width: 210px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px rgba(0,0, 0,0.2);
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-direction: column;
+  text-align: end;
+  background: var(--color-footer);
+  padding: 2rem;
+  position: absolute;
+  right: 0;
+  top: 40px;
+  margin-top: 1rem;
+  min-width: 210px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
 }
 
 .gpt3__navbar-menu_container p {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 
 .gpt3__navbar-menu_container-links-sign {
-    display: none;
+  display: none;
 }
 
-.navbar-dropdown {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    height: 100%;
-  }
-  
-  .navbar-dropdown-button {
-    background: none;
-    border: none;
-    color: #fff;
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 25px;
-    text-transform: capitalize;
-    margin: 0 1rem;
-    cursor: pointer;
-    padding: 0; /* Remove any default button padding */
-  }
-
-  .navbar-dropdown-menu {
-    position: absolute;
-    background-color: var(--color-footer);
-    min-width: 160px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    border-radius: 5px;
-  }
-  
-  .navbar-dropdown-menu button {
-    background: none;
-    border: none;
-    padding: 10px;
-    color: white;
-    text-align: left;
-    cursor: pointer;
-    font-family: var(--font-family);
-  }
-  
-  .navbar-dropdown-menu button:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-  }  
-
+/* Media queries remain the same */
 @media screen and (max-width: 1050px) {
-    .gpt3__navbar-links_container {
-        display: none;
-    }
-
-    .gpt3__navbar-menu {
-        display: flex;
-        z-index: 1000;
-    }
+  .gpt3__navbar-links_container {
+    display: none;
+  }
+  
+  .gpt3__navbar-menu {
+    display: flex;
+    z-index: 1000;
+  }
 }
 
 @media screen and (max-width: 700px) {
-    .gpt3__navbar {
-        padding: 2rem 4rem;
-    }
+  .gpt3__navbar {
+    padding: 2rem 4rem;
+  }
 }
 
 @media screen and (max-width: 550px) {
-    .gpt3__navbar {
-        padding: 2rem;
-    }
-
-    .gpt3__navbar-sign {
-        display: none;
-    }
-
-    .gpt3__navbar-menu_container {
-        top: 20px;
-    }
-
-    .gpt3__navbar-menu_container-links-sign {
-        display: block;
-    }
+  .gpt3__navbar {
+    padding: 2rem;
+  }
+  
+  .gpt3__navbar-sign {
+    display: none;
+  }
+  
+  .gpt3__navbar-menu_container {
+    top: 20px;
+  }
+  
+  .gpt3__navbar-menu_container-links-sign {
+    display: block;
+  }
 }
