--- a/src/components/team/Team.css
+++ b/src/components/team/Team.css
@@ -1,6 +1,6 @@
 .services {
   margin: 80px auto;
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-wrap: wrap; /* Allow wrapping for small screens */
   align-items: center;
@@ -43,7 +43,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: #FF4820;
+  background: #ff492050;
   color: white;
   padding: 5px 12px;
   border-radius: 5px;
@@ -53,10 +53,11 @@
 
 /* Service Images */
 .service img {
-  width: 100%;
-  border-radius: 10px;
+  width: 330px;
+  height: 330px;
+  border-radius: 40px;
   display: block;
-  padding: 10px;
+  padding: 5px;
 }
 
 /* Caption Overlay */
@@ -109,7 +110,7 @@
 
 .modal-content img {
   width: 50%;
-  max-height: 200px;
+  height: auto;
   border-radius: 8px;
 }
 
